--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.3",
     "prettier": "^3.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
