--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@mdxeditor/editor": "^3.20.0",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
@@ -27,7 +28,7 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.462.0",
     "mongoose": "^8.8.4",
-    "next": "15.0.3",
+    "next": "^15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "pino": "^9.5.0",
