Implement Create Question Form Logic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,12 +12,12 @@
       "error",
       {
         "groups": [
-          "builtin", // Built-in types are first
-          "external", // External libraries
-          "internal", // Internal modules
-          ["parent", "sibling"], // Parent and sibling types can be mingled together
-          "index", // Then the index file
-          "object" // Object imports
+          "builtin",
+          "external",
+          "internal",
+          ["parent", "sibling"],
+          "index",
+          "object"
         ],
         "newlines-between": "always",
         "pathGroups": [
@@ -35,7 +35,6 @@
       }
     ]
   },
-  "ignorePatterns": ["components/ui/**"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
